crates/aura-macros/tests/trybuild/invalid_flow_cost.stderr
error: Invalid annotation value: flow_cost expects an integer literal
  --> tests/trybuild/invalid_flow_cost.rs:3:1
   |
 3 | / choreography! {
 4 | |     #[namespace = "invalid_flow_cost"]
 5 | |     choreography InvalidFlowCost {
 6 | |         roles: Alice, Bob;
...  |
10 | | }
   | |_^
   |
   = note: this error originates in the macro `choreography` (in Nightly builds, run with -Z macro-backtrace for more info)
